// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCheckpointGroups handles empty checkpoints 1`] = `[]`;

exports[`generateCheckpointGroups handles empty history 1`] = `
[
  {
    "checkpoints": [
      {
        "createdAt": "2019-02-18T17:23:32.520Z",
        "id": "1",
        "name": "checkpoint 1",
        "startTime": 2019-02-18T17:23:32.520Z,
        "status": "FINISHED",
      },
      {
        "createdAt": "2019-02-18T17:23:32.790Z",
        "id": "2",
        "name": "checkpoint 2",
        "startTime": 2019-02-18T17:23:32.790Z,
        "status": "FINISHED",
      },
      {
        "createdAt": "2019-02-18T17:23:32.950Z",
        "id": "3",
        "name": "checkpoint 3",
        "startTime": 2019-02-18T17:23:32.950Z,
        "status": "FINISHED",
      },
    ],
    "name": "#1",
    "status": "FINISHED",
  },
]
`;

exports[`generateCheckpointGroups handles valid data 1`] = `
[
  {
    "checkpoints": [],
    "name": "#1",
    "status": "PREPARING",
  },
  {
    "checkpoints": [],
    "name": "#2",
    "status": "ENQUEUED",
  },
  {
    "checkpoints": [],
    "name": "#3",
    "status": "STARTING",
  },
  {
    "checkpoints": [],
    "name": "#4",
    "status": "RUNNING",
  },
  {
    "checkpoints": [
      {
        "createdAt": "2019-02-18T17:23:32.520Z",
        "id": "1",
        "name": "checkpoint 1",
        "startTime": 2019-02-18T17:23:32.520Z,
        "status": "FINISHED",
      },
      {
        "createdAt": "2019-02-18T17:23:32.790Z",
        "id": "2",
        "name": "checkpoint 2",
        "startTime": 2019-02-18T17:23:32.790Z,
        "status": "FINISHED",
      },
      {
        "createdAt": "2019-02-18T17:23:32.950Z",
        "id": "3",
        "name": "checkpoint 3",
        "startTime": 2019-02-18T17:23:32.950Z,
        "status": "FINISHED",
      },
    ],
    "name": "#5",
    "status": "FINISHED",
  },
  {
    "checkpoints": [],
    "name": "#6",
    "status": "FINISHED",
  },
]
`;
